--- a/emacs/.emacs.d/50-general.org
+++ b/emacs/.emacs.d/50-general.org
@@ -119,8 +119,8 @@ VC is a placeholder.
         (cond
          (force t)
          (result ; When spell check was completed, result is truthy
-          ;; When nothing was corrected, character tick counter didn't
-          ;; change
+          ;; When nothing was corrected, character tick counter is
+          ;; unchanged
           (or (= (buffer-chars-modified-tick) tick)
               (y-or-n-p "Spelling checked.  Commit? "))))))
     :config
