[emacs] Tag capture templates setup.

--- a/emacs/.emacs.d/90-personal.org
+++ b/emacs/.emacs.d/90-personal.org
@@ -200,7 +200,7 @@ Configure notes.
     (find-file-noselect org-roam-index-file 'nowarn))
 #+END_SRC
 
-* Capture templates
+* Capture templates                                                   :setup:
 #+BEGIN_SRC js :exports none
   ((args) => {
       "use strict";
