--- a/dotfiles.org
+++ b/dotfiles.org
@@ -664,7 +664,7 @@ Info Specification (freedesktop)]].
 To register the scheme handler, run:
 
 #+BEGIN_SRC sh
-  update-desktop-database ~/.local/share/applications
+  update-desktop-database "$XDG_DATA_HOME/applications"
 #+END_SRC
 
 * Jupyter Notebook
