[emacs] Move comment

--- a/emacs/.emacs.d/50-general.org
+++ b/emacs/.emacs.d/50-general.org
@@ -117,7 +117,8 @@ VC is a placeholder.
              (result (ispell-buffer)))
         (cond
          (force t)
-         (result ; When spell check was completed, result is truthy
+         ;; When spell check was completed, result is truthy
+         (result
           ;; When nothing was corrected, character tick counter is
           ;; unchanged
           (or (= (buffer-chars-modified-tick) tick)
